# Snake

./: CMakeLists.txt  README.md  collisions.c  collisions.h  dialogs.c  dialogs.h  engine.c  engine.h  food_point.c  food_point.h  global_configs.h  init_functions.c  init_functions.h  list_handling.c  list_handling.h  main.c  snake.c
